reverted back to previous list spacing, with new fix
- focusing on first event instead of last to avoid conflict in day view.

updates #18358

--- a/resources/tribe-events-full.css
+++ b/resources/tribe-events-full.css
@@ -328,15 +328,12 @@ select.tribe-events-dropdown {
 
 .tribe-events-list .vevent.hentry {
 	border-bottom: 1px solid #ddd;
-	padding: 0 0 2.25em 0;
-	margin: 0 0 2.25em 0;
+	margin: 2.25em 0;
 	overflow: auto;
 }
 
-.tribe-events-list .vevent.hentry.tribe-last {
-	padding: 0;
-	margin: 0;
-	border: none;
+.tribe-events-list .vevent.hentry.tribe-first {
+	margin-top: 0;
 }
 
 .tribe-events-list .tribe-events-event-details .tribe-events-event-cost + .entry-title, .events-archive .tribe-events-list .tribe-events-event-details .tribe-events-event-cost + .entry-title {
